ScoringSystem/ScoringSystem/Submission/1000001/2017-04-21_04~43~34,000/log/log.txt
temp.cpp: In function 'int foo()':
temp.cpp:7:1: error: expected ';' before '}' token
 }
 ^
